<resources>
    <string name="app_name">Clean Service</string>
    <string name="test_address">c.Kalachinsk, st. Kalachinskaya shirota: 55.0529870 (PKiO name of Gagarina)</string>
    <string name="Volume">Volume</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    <string name="basket_count">Number of baskets</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>