<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.EditDataActivity">

    <TextView
        android:id="@+id/edit_activity_tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:singleLine="false"
        android:text="@string/test_address"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_activity_tv_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Volume"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_activity_et_volume"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:background="@drawable/border_edit_text_style"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints="double"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_activity_tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_activity_et_weight"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:background="@drawable/border_edit_text_style"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints="double"
            tools:ignore="LabelFor" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>