<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:background="@color/design_default_color_background">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_recycler_view">

        <TextView
            android:id="@+id/text_view_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_address"
            android:layout_weight="2"
            android:textSize="20dp"
            android:singleLine="false"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/text_view_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/Volume"
                android:textSize="20dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_text_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/border_edit_text_style"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/text_view_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/weight"
                android:textSize="20dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_text_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border_edit_text_style"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>